--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "db:migrate": "node ./database/scripts/migrate.js",
     "db:print": "node ./database/scripts/print.js"
   },
@@ -20,7 +21,7 @@
     "framer-motion": "^4",
     "isomorphic-fetch": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
-    "next": "10.2.3",
+    "next": "11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "set-cookie-parser": "^2.4.8",
@@ -36,9 +37,11 @@
     "@types/isomorphic-fetch": "^0.0.35",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/react": "17.0.8",
+    "@types/set-cookie-parser": "^2.4.0",
     "@types/sqlite3": "^3.1.7",
     "@types/uuid": "^8.3.0",
-    "@types/set-cookie-parser": "^2.4.0",
+    "eslint": "^7.28.0",
+    "eslint-config-next": "^11.0.0",
     "typescript": "4.3.2"
   }
 }
